Fix overflow

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    overflow: hidden;
+    overflow: scroll;
     width: 100%;
     height: 100%;  
     background-color: $gray-300
